# GeneralsGameCode

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  vcpkg.json
Core/: .gitignore  CMakeLists.txt
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: ArchiveFile.h  ArchiveFileSystem.h  AsciiString.h  AudioAffect.h  AudioEventInfo.h  AudioEventRTS.h  AudioHandleSpecialValues.h  AudioRequest.h  AudioSettings.h  CRCDebug.h  Debug.h  DynamicAudioEventInfo.h  FileSystem.h  GameAudio.h  GameDefines.h  GameMusic.h  GameSounds.h  LocalFile.h  LocalFileSystem.h  MiscAudio.h  RAMFile.h  ReplaySimulation.h  STLUtils.h  StreamingArchiveFile.h  UnicodeString.h  WorkerProcess.h  Xfer.h  XferCRC.h  crc.h  file.h  simpleplayer.h
Core/GameEngine/Include/GameClient/: ClientRandomValue.h  VideoPlayer.h  WindowVideoManager.h
Core/GameEngine/Include/GameLogic/: LogicRandomValue.h
Core/GameEngine/Source/Common/: RandomValue.cpp  ReplaySimulation.cpp  WorkerProcess.cpp
Core/GameEngine/Source/GameClient/: VideoPlayer.cpp  VideoStream.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/Libraries/: CMakeLists.txt
Core/Libraries/Include/Lib/: BaseTypeCore.h
Core/Libraries/Include/rts/: debug.h
Core/Libraries/Source/Compression/: CMakeLists.txt  Compression.h  CompressionManager.cpp
Core/Libraries/Source/EABrowserDispatch/: BrowserDispatch.idl  CMakeLists.txt
Core/Libraries/Source/debug/: _pch.cpp  (+23 more)
Core/Tools/: CMakeLists.txt
Core/Tools/Autorun/: ARGS.CPP  ARGS.H  AUTORUN.RC  CDCNTRL.CPP  CMakeLists.txt  CallbackHook.h  DrawButton.cpp  DrawButton.h  EZGIMEX.cpp  GETCD.CPP  GameText.cpp  GameText.h  GetCD.h  IGR.cpp  IGR.h  Locale_API.cpp  Locale_API.h  POINT.h  RECT.h  TTFont.cpp  TTFont.h  Utils.cpp  Utils.h  ViewHTML.cpp  ViewHTML.h  WSYS_File.cpp  WSYS_FileSystem.cpp  WSYS_FileSystem.h  WSYS_RAMFile.cpp  WSYS_RAMFile.h  WSYS_StdFile.cpp  WSYS_StdFile.h  WSYS_StdFileSystem.cpp  WSYS_StdFileSystem.h  WSYS_file.h  WinFix.CPP  WinFix.H  Wnd_File.h  Wnd_file.cpp  autorun.cpp  (+5 more)
Core/Tools/Babylon/: Babylon.cpp  Babylon.h  Babylon.rc  BabylonDlg.cpp  BabylonDlg.h  CMakeLists.txt  DlgProxy.cpp  ExportDlg.cpp  GenerateDlg.cpp  MatchDlg.cpp  ProceedDlg.cpp  Report.cpp  RetranslateDlg.cpp  StdAfx.cpp  StdAfx.h  TransDB.cpp  TransDB.h  VIEWDBSII.cpp  VerifyDlg.cpp  VerifyTextDlg.cpp  ViewDBsDlg.cpp  XLStuff.cpp  XLStuff.h  bin.cpp  bin.h  excel8.cpp  excel8.h  expimp.cpp  expimp.h  fileops.cpp  fileops.h  iff.cpp  list.cpp  list.h  loadsave.cpp  loadsave.h  olestring.cpp  olestring.h  resource.h  transcs.cpp
Core/Tools/CRCDiff/: CMakeLists.txt  CRCDiff.cpp  debug.cpp  expander.cpp
Core/Tools/Compress/: CMakeLists.txt  Compress.cpp
Core/Tools/DebugWindow/: CMakeLists.txt  DebugWindow.cpp  DebugWindow.rc  DebugWindowDialog.cpp  DebugWindowDialog.h  DebugWindowExport.h  Resource.h  StdAfx.cpp  StdAfx.h
Core/Tools/ImagePacker/: CMakeLists.txt
Core/Tools/Launcher/: BFISH.CPP  BFISH.H  CMakeLists.txt  Protect.cpp  configfile.cpp  configfile.h  dialog.cpp  dictionary.h  filed.h  findpatch.cpp  findpatch.h  launcher1.rc  loadbmp.cpp  loadbmp.h  main.cpp  monod.cpp  patch.cpp  process.cpp  process.h  resource.h  streamer.h  wdebug.cpp  wdebug.h  winblows.cpp  wstring.cpp  wstring.h  wstypes.h
Core/Tools/MapCacheBuilder/: CMakeLists.txt
Core/Tools/PATCHGET/: CHATAPI.CPP  CHATAPI.H  CMakeLists.txt  COMINIT.CPP  DownloadManager.cpp  DownloadManager.h  PROCESS.CPP  PROCESS.H  RESOURCE.H  SCRIPT1.RC  WINBLOWS.CPP  WINBLOWS.H  WSTYPES.H  debug.cpp  debug.h  registry.cpp
Core/Tools/W3DView/: AddToLineupDialog.cpp  AdvancedAnimSheet.cpp  AggregateNameDialog.cpp  AggregateNameDialog.h  AmbientLightDialog.cpp  AnimMixingPage.cpp  AnimReportPage.cpp  AnimatedSoundOptionsDialog.cpp  AnimatedSoundOptionsDialog.h  AnimationPropPage.cpp  AnimationSpeed.cpp  AssetInfo.cpp  AssetInfo.h  AssetPropertySheet.cpp  AssetTypes.h  BackgroundBMPDialog.cpp  BackgroundColorDialog.cpp  BackgroundObjectDialog.cpp  BoneMgrDialog.cpp  BoneMgrDialog.h  CMakeLists.txt  CameraDistanceDialog.cpp  CameraSettingsDialog.cpp  CameraSettingsDialog.h  ColorBar.cpp  ColorBar.h  ColorPicker.cpp  ColorPicker.h  ColorPickerDialogClass.cpp  ColorPickerDialogClass.h  ColorSelectionDialog.cpp  ColorSelectionDialog.h  ColorUtils.cpp  DataTreeView.cpp  DataTreeView.h  DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  DialogToolbar.cpp  DialogToolbar.h  DirectoryDialog.cpp  (+102 more)
Core/Tools/assetcull/: CMakeLists.txt  assetcull.cpp
Core/Tools/buildVersionUpdate/: CMakeLists.txt  buildVersionUpdate.cpp
Core/Tools/mangler/: CMakeLists.txt  crc.cpp  mangler.cpp  manglertest.cpp
Core/Tools/matchbot/: CMakeLists.txt  generals.cpp  generals.h  main.cpp  matcher.cpp  mydebug.cpp  mydebug.h
Core/Tools/textureCompress/: CMakeLists.txt  resource.h  textureCompress.cpp
Core/Tools/timingTest/: CMakeLists.txt  timingTest.cpp
Core/Tools/versionUpdate/: CMakeLists.txt  versionUpdate.cpp
Core/Tools/wolSetup/: CMakeLists.txt  resource.h  verchk.cpp  wolSetup.cpp  wolSetup.h
Dependencies/MaxSDK/: CMakeLists.txt  README.md
Generals/: CMakeLists.txt
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/Libraries/: CMakeLists.txt
Generals/Code/Main/: CMakeLists.txt  RTS.RC  WinMain.cpp  resource.h
Generals/Code/Tools/: CMakeLists.txt
GeneralsMD/: .gitignore  CMakeLists.txt
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Libraries/: CMakeLists.txt
GeneralsMD/Code/Main/: CMakeLists.txt  RTS.RC  WinMain.cpp  app.manifest  resource.h
GeneralsMD/Code/Tools/: CMakeLists.txt
resources/: CMakeLists.txt
resources/gitinfo/: gitinfo.cpp.in  gitinfo.h
resources/visualstudio/: asciistring.natvis  unicodestring.natvis
(+4833 files in other folders)
